# fixed-point-vector

./: .gitlab-ci.yml  CMakeLists.txt  License.txt  Readme.md  bitset.h  fixedpointvector.h  main.cpp
examples/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/: fixedpointvector.h
lib/test/: fixedpointvector-test.cpp  main.cpp
